--- a/gameShop/frontpage/templates/frontpage/index.html
+++ b/gameShop/frontpage/templates/frontpage/index.html
@@ -1,9 +1,30 @@
-{% load static %}
-<h1>
-  <img src="{% static "frontpage/logo.png" %}" alt="My image">
+<!--
+<h1 id="logins">
   {% if user.is_authenticated %}
     <a href="{% url 'logout' %}">Log out</a>
   {% else %}
     <a href="{% url 'login' %}">Log in</a>
   {% endif %}
 </h1>
+-->
+
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'frontpage/style.css' %}">
+
+
+<header>
+  <div id="logo">MOST AWESOME GAMES</div>
+</header>
+
+<div class="menu">
+  <a href="#frontpage">FRONTPAGE</a>
+  <a href="#games">GAMES</a>
+  <a href="#highscores">TOP HIGHSCORES</a>
+  <div class="menu-log">
+    {% if user.is_authenticated %}
+      <a href="{% url 'logout' %}">LOG OUT</a>
+    {% else %}
+      <a href="{% url 'login' %}">LOG IN</a>
+    {% endif %}
+  </div>
+</div>
