some little tweaks to style

--- a/gameShop/frontpage/static/frontpage/style.css
+++ b/gameShop/frontpage/static/frontpage/style.css
@@ -6,7 +6,7 @@
 .menu {
     position: sticky;
     top: 0;
-    background-color: turquoise;
+    background-color: tomato;
     padding:10px 0px 10px 0px;
     color:white;
     margin: 0 auto;
