--- a/gameShop/frontpage/templates/frontpage/index.html
+++ b/gameShop/frontpage/templates/frontpage/index.html
@@ -1,13 +1,3 @@
-<!--
-<h1 id="logins">
-  {% if user.is_authenticated %}
-    <a href="{% url 'logout' %}">Log out</a>
-  {% else %}
-    <a href="{% url 'login' %}">Log in</a>
-  {% endif %}
-</h1>
--->
-
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'frontpage/style.css' %}">
 
@@ -27,4 +17,10 @@
       <a href="{% url 'login' %}">LOG IN</a>
     {% endif %}
   </div>
+</div>
+
+<div class="body">
+  <section id="content1">
+    <h2>SOMETHING HERE</h2>
+  </section>
 </div>
