--- a/gameShop/users/templates/users/logout.html
+++ b/gameShop/users/templates/users/logout.html
@@ -1,4 +1,4 @@
 <div>
     You have successfully logged out.
-    <a href="{% url 'frontpage-home' %}">Home</a>
+    <a href="{% url 'shop-home' %}">Home</a>
 </div>
