--- a/gameShop/shop/templates/shop/index.html
+++ b/gameShop/shop/templates/shop/index.html
@@ -3,7 +3,7 @@
 {% block content %}
   <div class="body">
     <section id="content1">
-      <h2>HIGHSCORES</h2>
+      <h2>SOMETHING HERE</h2>
     </section>
   </div>
 {% endblock content%}
