--- a/gameShop/users/templates/users/register.html
+++ b/gameShop/users/templates/users/register.html
@@ -1,9 +1,13 @@
-<div>
-    <form method="POST">
-        {% csrf_token %} <!--Required to prevent cross-site request forgery-->
-        {{ form.as_p }}
-        <div>
-            <button type="submit">Create Account</button>
-        </div>
-    </form>
-</div>
+{% extends "shop/base.html" %}
+
+{% block content %}
+    <div>
+        <form method="POST">
+            {% csrf_token %} <!--Required to prevent cross-site request forgery-->
+            {{ form.as_p }}
+            <div>
+                <button type="submit">Create Account</button>
+            </div>
+        </form>
+    </div>
+{% endblock content%}
