--- a/gameShop/play_game/templates/play_game/play.html
+++ b/gameShop/play_game/templates/play_game/play.html
@@ -3,7 +3,7 @@
 {% block content %}
   <div class="body">
     <section id="content1">
-      <h2>SOMETHING HERE</h2>
+      <h2>PLAY VIEW</h2>
     </section>
   </div>
 {% endblock content %}
