--- a/gameShop/shop/templates/shop/base.html
+++ b/gameShop/shop/templates/shop/base.html
@@ -7,14 +7,14 @@
 </header>
 
 <div class="menu">
-  <a href={% url 'shop-home' %}>HOME</a>
+  <a href="{% url 'shop-home' %}">HOME</a>
   <a href="#games">GAMES</a>
-  <a href={% url 'highscores' %}>TOP HIGHSCORES</a>
+  <a href="{% url 'highscores' %}">TOP HIGHSCORES</a>
   <div class="menu-log">
     {% if user.is_authenticated %}
-      <a href={% url 'logout' %}>LOG OUT</a>
+      <a href="{% url 'logout' %}">LOG OUT</a>
     {% else %}
-      <a href={% url 'login' %}>LOG IN</a>
+      <a href="{% url 'login' %}">LOG IN</a>
     {% endif %}
   </div>
 </div>
