Add link and routes to play game

--- a/gameShop/play_game/templates/play_game/play.html
+++ b/gameShop/play_game/templates/play_game/play.html
@@ -4,6 +4,7 @@
   <div class="body">
     <section id="content1">
       <h2>PLAY VIEW</h2>
+      <p>{{ game.name }}</p>
     </section>
   </div>
 {% endblock content %}
