--- a/gameShop/shop/static/shop/highscores_style.css
+++ b/gameShop/shop/static/shop/highscores_style.css
@@ -1,38 +1,63 @@
-#logo {
-            font-size:40px;
-            color:turquoise;
-            font-weight:bold;
-        }
-.menu {
-    position: sticky;
-    top: 0;
-    background-color: tomato;
-    padding:10px 0px 10px 0px;
-    color:white;
-    margin: 0 auto;
-    overflow: hidden;
+* {box-sizing: border-box}
+
+/* Style the tab */
+.tab {
+  float: left;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+  width: 30%;
+  height: 300px;
 }
-.menu a {
-    float: left;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 20px;
+
+/* Style the buttons that are used to open the tab content */
+.tab button {
+  display: block;
+  background-color: inherit;
+  color: black;
+  padding: 22px 16px;
+  width: 100%;
+  border: none;
+  outline: none;
+  text-align: left;
+  cursor: pointer;
+  transition: 0.3s;
 }
-.menu-log {
-    right: auto;
-    float: right;
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
 }
-footer {
-    width: 100%;
-    bottom: 0px;
-    background-color: #000;
-    color: #fff;
-    position: absolute;
-    padding-top:20px;
-    padding-bottom:50px;
-    text-align:center;
-    font-size:30px;
-    font-weight:bold;
+
+/* Create an active/current "tab button" class */
+.tab button.active {
+  background-color: #ccc;
 }
+
+/* Style the tab content */
+.tabcontent {
+  float: left;
+  padding: 0px 12px;
+  border: 1px solid #ccc;
+  width: 70%;
+  border-left: none;
+  height: 300px;
+}
+
+<script>
+function openGame(evt, gameName) {
+  var i, tabcontent, tablinks;
+  tabcontent = document.getElementsByClassName("tabcontent");
+  for (i = 0; i < tabcontent.length; i++) {
+    tabcontent[i].style.display = "none";
+  }
+  tablinks = document.getElementsByClassName("tablinks");
+  for (i = 0; i < tablinks.length; i++) {
+    tablinks[i].className = tablinks[i].className.replace(" active", "");
+  }
+  document.getElementById(gameName).style.display = "block";
+  evt.currentTarget.className += " active";
+}
+
+// Get the element with id="defaultOpen" and click on it
+document.getElementById("defaultOpen").click();
+</script>
