--- a/gameShop/users/templates/users/login.html
+++ b/gameShop/users/templates/users/login.html
@@ -11,6 +11,6 @@
 
     <div>
         Don't have an account yet?
-        <a href="{% url 'register' %}">Register</a>
+        <a href="{% url 'pre-register' %}">Register</a>
     </div>
 {% endblock content %}
