--- a/gameShop/users/templates/users/register_start.html
+++ b/gameShop/users/templates/users/register_start.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div>
         <h2>Let's create an account! Are you a..</h2>
-        <a href="{% url 'register-player' %}">Player</a> <br>
-        <a href="{% url 'register-dev' %}">Developer</a>
+        <a href="{% url 'register' 'player' %}">Player</a> <br>
+        <a href="{% url 'register' 'developer' %}">Developer</a>
     </div>
 {% endblock content%}
