Added css of highscores

--- a/gameShop/shop/templates/shop/base.html
+++ b/gameShop/shop/templates/shop/base.html
@@ -1,5 +1,6 @@
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'shop/base_style.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'shop/highscores_style.css' %}">
 
 
 <header>
