--- a/gameShop/shop/static/shop/highscores_style.css
+++ b/gameShop/shop/static/shop/highscores_style.css
@@ -1,4 +1,5 @@
 * {box-sizing: border-box}
+body {font-family: "Lato", sans-serif;}
 
 /* Style the tab */
 .tab {
@@ -6,10 +7,10 @@
   border: 1px solid #ccc;
   background-color: #f1f1f1;
   width: 30%;
-  height: 300px;
+  height: 700px;
 }
 
-/* Style the buttons that are used to open the tab content */
+/* Style the buttons inside the tab */
 .tab button {
   display: block;
   background-color: inherit;
@@ -21,6 +22,7 @@
   text-align: left;
   cursor: pointer;
   transition: 0.3s;
+  font-size: 17px;
 }
 
 /* Change background color of buttons on hover */
@@ -40,24 +42,5 @@
   border: 1px solid #ccc;
   width: 70%;
   border-left: none;
-  height: 300px;
+  height: 700px;
 }
-
-<script>
-function openGame(evt, gameName) {
-  var i, tabcontent, tablinks;
-  tabcontent = document.getElementsByClassName("tabcontent");
-  for (i = 0; i < tabcontent.length; i++) {
-    tabcontent[i].style.display = "none";
-  }
-  tablinks = document.getElementsByClassName("tablinks");
-  for (i = 0; i < tablinks.length; i++) {
-    tablinks[i].className = tablinks[i].className.replace(" active", "");
-  }
-  document.getElementById(gameName).style.display = "block";
-  evt.currentTarget.className += " active";
-}
-
-// Get the element with id="defaultOpen" and click on it
-document.getElementById("defaultOpen").click();
-</script>
