--- a/gameShop/shop/templates/shop/buy_game.html
+++ b/gameShop/shop/templates/shop/buy_game.html
@@ -3,9 +3,8 @@
 {% block content %}
     <h2>Buy this game:</h2>
 
-    <div>{{ game.name }}</div>
-    <p>{{ game.description }}</p>
-    <div>{{game.price }}</div>
+    <div>Name: {{ game.name }}</div>
+    <div>Amount: {{ game.price }} €</div>
     <div>
         <a href="{% url 'game-list' %}">Cancel</a>
         <a href="{% url 'buy-game' game.pk %}">Buy now</a>
