--- a/gameShop/shop/templates/shop/buy_success.html
+++ b/gameShop/shop/templates/shop/buy_success.html
@@ -2,5 +2,6 @@
 
 {% block content %}
     <div>Thanks for your purchase!</div>
+    <div>Go to <a href="{% url 'game-detail' game.pk %}">{{ game.name }}</a></div>
 
 {% endblock content%}
