--- a/gameShop/shop/templates/shop/buy_error.html
+++ b/gameShop/shop/templates/shop/buy_error.html
@@ -1,7 +1,7 @@
 {% extends "shop/base.html" %}
 
 {% block content %}
-    <div>An error has occurred during and your purchase could not be completed. Please try again later.</div>
+    <div>An error has occurred and your purchase could not be completed. Please try again later.</div>
     <div><a href="{% url 'game-list' %}">Games</a></div>
 
 {% endblock content%}
