Fix username display in highscores

--- a/gameShop/shop/templates/shop/highscores_details.html
+++ b/gameShop/shop/templates/shop/highscores_details.html
@@ -19,7 +19,7 @@
 
           {% if game.name == scores.game.name %}
 
-            <li> User: {{scores.game_purchase.user.username}} highscore: {{scores.highscore}}</li>
+            <li> User: {{scores.user.username}} highscore: {{scores.highscore}}</li>
           {% endif %}
 
     {% endfor %}
