--- a/gameShop/shop/templates/shop/buy_error.html
+++ b/gameShop/shop/templates/shop/buy_error.html
@@ -2,6 +2,7 @@
 
 {% block content %}
     <div>An error has occurred and your purchase could not be completed. Please try again later.</div>
+    <div>If you believe there has been a mistake, please contact the site admin.</div>
     <div><a href="{% url 'game-list' %}">Games</a></div>
 
 {% endblock content%}
