--- a/gameShop/play_game/templates/play_game/play.html
+++ b/gameShop/play_game/templates/play_game/play.html
@@ -1,6 +1,10 @@
-{% extends "shop/base.html" %}
 
-{% block content %}
+<!doctype html>
+{% load static %}
+
+
+<head>
+  <script src="{% static 'play_game/jquery-3.2.1.min.js' %}"></script>
   <script>
   /* global $ */
   $(document).ready(function() {
@@ -11,7 +15,7 @@
       //Get data from sent message
       var data = JSON.parse(JSON.stringify(evt.originalEvent.data));
       //Create a new list item based on the data
-      if (data.score != undefined)
+      if (data.gameState.score != undefined)
       {
         if (data.messageType == "SAVE"){
           $.ajax({
@@ -19,27 +23,49 @@
             data: {
               'save_message': data
             },
-            dataType: 'json',
-
+            success: function () {
+                alert("Gamestate saved.");
           }
 
-          )
+        });
         }
-        var newItem = '\n\t<li>' + (data.score) + '</li>';
+        var newItem = '\n\t<li>' + (data.gameState.score) + '</li>';
         //Add the item to the beginning of the actions list
         $('#actions').prepend(newItem);
       }
     });
   });
   </script>
+  <link rel="stylesheet" type="text/css" href="{% static 'shop/base_style.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'shop/highscores_style.css' %}">
+
+</head>
+
+
+
+  <header>
+    <div id="logo">MOST AWESOME GAMES</div>
+  </header>
+
+  <div class="menu">
+    <a href="{% url 'shop-home' %}">HOME</a>
+    <a href="{% url 'game-list' %}">GAMES</a>
+    <a href="{% url 'highscores' %}">TOP HIGHSCORES</a>
+    <div class="menu-log">
+      {% if user.is_authenticated %}
+        <a href="{% url 'logout' %}">LOG OUT</a>
+      {% else %}
+        <a href="{% url 'login' %}">LOG IN</a>
+      {% endif %}
+    </div>
+  </div>
 
   <div class="body">
     <section id="content1">
       <h2>PLAY VIEW</h2>
       <p>{{ game.name }}</p>
     </section>
-    <iframe id="encoder_iframe" src= "{{ game.source }}" width = 900px height = 300px></iframe>
+    <iframe id="encoder_iframe" src= '{{ game.source}}' width = 900px height = 300px></iframe>
     <ul id="actions">
     </ul>
   </div>
-{% endblock content %}
