--- a/gameShop/shop/templates/shop/game_list.html
+++ b/gameShop/shop/templates/shop/game_list.html
@@ -1,18 +1,35 @@
 {% extends "shop/base.html" %}
 
 {% block content %}
-    <h2>Games list:</h2>
 
-    {% for game in object_list %}
-        <div>
-            {{ game.name }}
-            <a href="{% url 'game-detail' game.pk %}">View</a>
-            by: {{ game.author.username }}
-        </div>
-    {% endfor %}
+<style>
+  h2 {
+    color: tomato;
+    padding-left: 40px;
+  }
 
-    {% if user.is_authenticated and user.profile.is_dev %}
-        <a href="{% url 'game-create' %}">Add a new game</a>
-    {% endif %}
+  .gameList {
+    padding-left: 55px;
+    border: 10px;
+  }
+
+  
+
+</style>
+
+<h2>Available games:</h2>
+
+<ul class="gameList">
+{% for game in object_list %}
+    <li class="game">
+        <h3>{{ game.name }}  By: {{ game.author.username }}<h3> <br>
+        <a href="{% url 'game-detail' game.pk %}">Play this game</a> <br>
+    </li><br>
+{% endfor %}
+</ul>
+
+{% if user.is_authenticated and user.profile.is_dev %}
+    <a href="{% url 'game-create' %}">Add a new game</a>
+{% endif %}
 
 {% endblock content %}
