Add quotes to tabcontent id

--- a/gameShop/shop/templates/shop/highscores_details.html
+++ b/gameShop/shop/templates/shop/highscores_details.html
@@ -13,7 +13,7 @@
   </div>
 
 {% for game in games%}
-  <div id={{game.name}} class="tabcontent">
+  <div id="{{game.name}}" class="tabcontent">
     <ol>
         {% for scores in score %}
 
