--- a/gameShop/shop/templates/shop/base.html
+++ b/gameShop/shop/templates/shop/base.html
@@ -22,15 +22,16 @@
 </header>
 
 <div class="menu">
-  <a href="{% url 'shop-home' %}">HOME</a>
-  <a href="{% url 'game-list' %}">GAMES</a>
-  <a href="{% url 'highscores' %}">HIGHSCORES</a>
+  <a href="{% url 'shop-home' %}">Home</a>
+  <a href="{% url 'game-list' %}">Games</a>
+  <a href="{% url 'highscores' %}">Highscores</a>
   <div class="menu-log">
     {% if user.is_authenticated %}
-      <a href="{% url 'logout' %}">LOG OUT</a>
+        <a href="{% url 'profile' %}">My Account</a>
+        <a href="{% url 'logout' %}">Log Out</a>
     {% else %}
-      <a href="{% url 'pre-register' %}">SIGN UP</a>
-      <a href="{% url 'login' %}">LOG IN</a>
+      <a href="{% url 'pre-register' %}">Sign Up</a>
+      <a href="{% url 'login' %}">Log In</a>
     {% endif %}
   </div>
 </div>
