--- a/gameShop/shop/templates/shop/game_list.html
+++ b/gameShop/shop/templates/shop/game_list.html
@@ -24,7 +24,16 @@
 
 </style>
 
-<h2>Available games:</h2>
+
+
+{% block extrainfo %}
+    <h2>Available games:</h2>
+{% endblock extrainfo %}
+
+{% if user.is_authenticated and user.profile.is_dev %}
+    <a href="{% url 'game-create' %}">Add a new game</a>
+{% endif %}
+
 
 <ul class="gameList">
 {% for game in object_list %}
@@ -40,8 +49,5 @@
 {% endfor %}
 </ul>
 
-{% if user.is_authenticated and user.profile.is_dev %}
-    <a href="{% url 'game-create' %}">Add a new game</a>
-{% endif %}
 
 {% endblock content %}
