--- a/gameShop/shop/templates/shop/index.html
+++ b/gameShop/shop/templates/shop/index.html
@@ -8,7 +8,7 @@
       {% else %}
         <div>You are not signed in</div>
       {% endif %}
-      <br> <h2>SOMETHING HERE</h2>
+      <br> <h2>Welcome to Most Awesome Games, home of the best games in the world!</h2>
     </section>
   </div>
 {% endblock content %}
