Only show bought games on profile view

--- a/gameShop/shop/templates/shop/profile.html
+++ b/gameShop/shop/templates/shop/profile.html
@@ -7,5 +7,5 @@
         <h3>Manage your inventory <a href="{% url 'manage-games' %}">here</a>.</h3>
     {% endif %}
 
-    <h2>Owned games:</h2>
+    <h2>Games you have bought:</h2>
 {% endblock extrainfo %}
