Added new gmail login buttons in sign up page

--- a/gameShop/users/templates/users/register_start.html
+++ b/gameShop/users/templates/users/register_start.html
@@ -1,13 +1,22 @@
 {% extends "shop/base.html" %}
 
 {% block content %}
+{% load socialaccount %}
+{% providers_media_js %}
 
 <style>
-  .bordered {
+  #bordered1 {
     width: 500px;
     height: 500px;
-    padding: 20px;
+    padding: 25px;
     background-color: tomato;
+  }
+
+  #bordered2 {
+    width: 500px;
+    height: 500px;
+    padding: 25px;
+    background-color: turquoise;
   }
 
   a.bordered {
@@ -17,11 +26,19 @@
     font-size:35px;
   }
 
+
+
 </style>
 
 <div align="center">
     <h2>Let's create an account! Are you a..</h2> <br><br><br><br><br>
-    <a class="bordered" href="{% url 'register' 'player' %}" >PLAYER</a><br><br><br><br><br><br>
-    <a class="bordered" href="{% url 'register' 'developer' %}">DEVELOPER</a>
+    <a class="bordered" id="bordered1" href="{% url 'register' 'player' %}" >PLAYER</a><br><br><br><br><br><br>
+    <a class="bordered" id="bordered1" href="{% url 'register' 'developer' %}">DEVELOPER</a>
+    <br><br><br><br><br><br><br><br>
+    <h2>You can also use your Gmail account for creating an account..</h2><br><br><br><br><br>
+    <a class="bordered" id="bordered2" href="{% provider_login_url "google" %}" >PLAYER</a><br><br><br><br><br><br>
+    <a class="bordered" id="bordered2" href="{% url 'register' 'developer' %}">DEVELOPER</a>
 </div>
+
+
 {% endblock content%}
